# blog-post-code

./: .gitignore  README.md  pyproject.toml
.github/workflows/: onpush.yml
blog_post_code/game_of_life/: conway.py
blog_post_code/lexer/: __init__.py  _lexer.py
blog_post_code/pretty_pipes/: pipes.py
blog_post_code/wordle_cliques/: cliques.jsonl  cliques.py
tests/: test_game_of_life.py  test_pretty_pipes.py  test_wordle_cliques.py
