[tool.poetry]
name = "blog_post_code"
version = "0.1.0"
description = "Source code for my blog posts at willduke.github.io"
authors = ["Will Duke <willduke.wd@gmail.com>"]

[tool.poetry.scripts]
conway = "blog_post_code.game_of_life.conway:main"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
pipe = "^2.0"
igraph = {extras = ["plotting"], version = "^0.9.11"}
jsonlines = "^3.1.0"
pandas = "^2.0.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^22.12.0"
ruff = "^0.0.254"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
